--- a/config.json
+++ b/config.json
@@ -1,33 +1,26 @@
 {
-  "name": "canimo",
-  "description": "Ligtweight deep learning library for JavaScript",
+  "name": "browml",
+  "description": "light weight machine learning library for javascript",
   "version": "1.0.0",
   "authors": [
     "Cagan Aytac <cagan.aytac09@gmail.com>"
   ],
   "license": "MIT",
   "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "start": "node .",
-    "build": "echo \"No build step\"",
-    "test": "echo \"No tests specified\" && exit 0"
-  },
+  "moduleType": [
+  "es6"
+  ],
   "keywords": [
     "machine-learning",
-    "deep-learning",
+    "data-science",
+    "data-analysis",
+    "statistics",
+    "data-visualization",
+    "regression",
+    "classification",
     "AI",
     "ML",
     "javascript",
-    "neural-networks",
-    "canimo"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/<username>/canimo.git"
-  },
-  "bugs": {
-    "url": "https://github.com/caganaytac/canimo/issues"
-  },
-  "homepage": "https://github.com/caganaytac/canimo#readme"
+    "brow-ml"
+  ]
 }
